fixed bug for mso
git-svn-id: http://svn.sj.9x9.tv:8080/repos/misc/trunk/mobile/android51a@5888 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 9x9--> 
+    <!-- 
     <string name="app_name">9x9.tv</string>
 	<string name="app_icon">@drawable/tt_icon_new</string>         
     <string name="white_label">portal</string>
@@ -14,12 +15,13 @@
     <string name="signin_bg">bgnew</string>     
     <string name="set_banner">banner_crashcourse</string>   
 	<string name="fb_app_id">361253423962738</string>
-	  
-    <!-- crash course
+    -->
+		  
+    <!-- crash course -->
     <string name="app_name">Crash Course on FLIPr</string>
     <string name="app_icon">@drawable/crashcourse_launch_logo</string>    
     <string name="white_label">crashcourse</string>     
-    <string name="mso">9x9</string>
+    <string name="mso">crashcourse</string>
     <string name="default_region">en</string>               
     <string name="logo">crash_course_cyan</string>
     <string name="splash_background">bg_open_crashcourse</string>
@@ -29,7 +31,6 @@
     <string name="signin_bg">bg_open_crashcourse</string>  
     <string name="set_banner">banner_crashcourse</string>      	
     <string name="fb_app_id">1414438248794640</string>    
-    -->
     
     <!-- cts 
     <string name="app_name">CTS</string>
