Added several Fan Apps.
git-svn-id: http://svn.sj.9x9.tv:8080/repos/misc/trunk/mobile/android51a@5990 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,38 +14,210 @@
     <string name="signin_bg">bgnew</string>     
     <string name="set_banner">banner_crashcourse</string>   
 	<string name="fb_app_id">361253423962738</string>
-	  
-    <!-- crash course
+	
+    <!-- Joey Graceffa -->
+    <!-- 
+    <string name="app_name">JoeyGraceffa on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/joeygraceffa_launch_logo</string>
+    <string name="white_label">joeygraceffa</string>
+    <string name="mso">joeygraceffa</string>
+    <string name="default_region">en</string>
+    <string name="logo">joeygraceffa_logo</string>
+    <string name="splash_background">joeygraceffa_bg_open</string>
+    <string name="splash_foreground">joeygraceffa_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">joeygraceffa_logo_signin</string>
+    <string name="signin_bg">joeygraceffa_bg_open</string>
+    <string name="set_banner">joeygraceffa_banner01</string>
+    <string name="fb_app_id">595235090571267</string>
+    -->
+
+    <!-- Spinnin' Records -->
+    <!-- 
+    <string name="app_name">SpinninRec on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/spinninrec_launch_logo</string>
+    <string name="white_label">spinninrec</string>
+    <string name="mso">spinninrec</string>
+    <string name="default_region">en</string>
+    <string name="logo">spinninrec_logo</string>
+    <string name="splash_background">spinninrec_bg_open</string>
+    <string name="splash_foreground">spinninrec_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">spinninrec_logo_signin</string>
+    <string name="signin_bg">spinninrec_bg_open</string>
+    <string name="set_banner">spinninrec_banner01</string>
+    <string name="fb_app_id">1468306366724948</string>
+    -->
+
+    <!-- The Fine Bros -->
+    <!-- 
+    <string name="app_name">The Fine Bros on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/thefinebros_launch_logo</string>
+    <string name="white_label">thefinebros</string>
+    <string name="mso">thefinebros</string>
+    <string name="default_region">en</string>
+    <string name="logo">thefinebros_logo</string>
+    <string name="splash_background">thefinebros_bg_open</string>
+    <string name="splash_foreground">thefinebros_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">thefinebros_logo_signin</string>
+    <string name="signin_bg">thefinebros_bg_open</string>
+    <string name="set_banner">thefinebros_banner01</string>
+    <string name="fb_app_id">1468306366724948</string>
+    -->
+
+    <!-- History -->
+    <!-- 
+    <string name="app_name">History Channel on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/history_launch_logo</string>
+    <string name="white_label">history</string>
+    <string name="mso">history</string>
+    <string name="default_region">en</string>
+    <string name="logo">history_logo</string>
+    <string name="splash_background">history_bg_open</string>
+    <string name="splash_foreground">history_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">history_logo_signin</string>
+    <string name="signin_bg">history_bg_open</string>
+    <string name="set_banner">history_banner01</string>
+    <string name="fb_app_id">1423211814590720</string>
+    -->
+    
+    <!-- NBA -->
+    <!-- 
+    <string name="app_name">NBA on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/nba_launch_logo</string>
+    <string name="white_label">nba</string>
+    <string name="mso">nba</string>
+    <string name="default_region">en</string>
+    <string name="logo">nba_logo</string>
+    <string name="splash_background">nba_bg_open</string>
+    <string name="splash_foreground">nba_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">nba_logo_signin</string>
+    <string name="signin_bg">nba_bg_open</string>
+    <string name="set_banner">nba_banner01</string>
+    <string name="fb_app_id">277020789128327</string>
+    -->
+
+    <!-- Smosh -->
+    <!-- 
+    <string name="app_name">Smosh on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/smosh_launch_logo</string>
+    <string name="white_label">smosh</string>
+    <string name="mso">smosh</string>
+    <string name="default_region">en</string>
+    <string name="logo">smosh_logo</string>
+    <string name="splash_background">smosh_bg_open</string>
+    <string name="splash_foreground">smosh_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">smosh_logo_signin</string>
+    <string name="signin_bg">smosh_bg_open</string>
+    <string name="set_banner">smosh_banner01</string>
+    <string name="fb_app_id">492773477497848</string>
+    -->
+	
+    <!-- Shane -->
+    <!-- 
+    <string name="app_name">Shane on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/shane_launch_logo</string>
+    <string name="white_label">shane</string>
+    <string name="mso">shane</string>
+    <string name="default_region">en</string>
+    <string name="logo">shane_logo</string>
+    <string name="splash_background">shane_bg_open</string>
+    <string name="splash_foreground">shane_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">shane_logo_signin</string>
+    <string name="signin_bg">shane_bg_open</string>
+    <string name="set_banner">shane_banner01</string>
+    <string name="fb_app_id">359889977487152</string>
+    -->   
+	
+    <!-- College Humor -->
+    <!-- 
+    <string name="app_name">Collegehumor on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/collegehumor_launch_logo</string>
+    <string name="white_label">collegehumor</string>
+    <string name="mso">collegehumor</string>
+    <string name="default_region">en</string>
+    <string name="logo">collegehumor_logo</string>
+    <string name="splash_background">collegehumor_bg_open</string>
+    <string name="splash_foreground">collegehumor_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">collegehumor_logo_signin</string>
+    <string name="signin_bg">collegehumor_bg_open</string>
+    <string name="set_banner">collegehumor_banner01</string>
+    <string name="fb_app_id">613862398667500</string>
+    -->
+	
+    <!-- Network_A -->
+    <!-- 
+    <string name="app_name">Network_A on FLIPr</string>
+    <string name="app_icon">@drawable/networka_launch_logo</string>
+    <string name="white_label">networka</string>
+    <string name="mso">networka</string>
+    <string name="default_region">en</string>
+    <string name="logo">logo_networka</string>
+    <string name="splash_background">bg_open_networka</string>
+    <string name="splash_foreground">open_logo_networka</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">logo_networka</string>
+    <string name="signin_bg">bg_open_networka</string>
+    <string name="set_banner">banner_networka</string>
+    <string name="fb_app_id">450168698417667</string>
+    -->
+
+    <!-- crash course -->
+    <!-- 
     <string name="app_name">Crash Course on FLIPr</string>
     <string name="app_icon">@drawable/crashcourse_launch_logo</string>    
     <string name="white_label">crashcourse</string>     
     <string name="mso">9x9</string>
     <string name="default_region">en</string>               
-    <string name="logo">crash_course_cyan</string>
+    <string name="logo">logo_crashcourse</string>
     <string name="splash_background">bg_open_crashcourse</string>
     <string name="splash_foreground">open_logo_crashcourse</string>    
     <string name="splash_slogan"></string>    
     <string name="signin_logo">logo_crashcourse</string>        
     <string name="signin_bg">bg_open_crashcourse</string>  
     <string name="set_banner">banner_crashcourse</string>      	
-    <string name="fb_app_id">1414438248794640</string>    
+    <string name="fb_app_id">1414438248794640</string>
+    -->    
+
+    <!-- EchoMusic -->
+    <!-- 
+    <string name="app_name">EchoMusic</string>
+    <string name="app_icon">@drawable/ic_launcher_hdpi_echomusic</string>
+    <string name="white_label">echomusic</string>
+    <string name="mso">echomusic</string>
+    <string name="default_region">zh</string>
+    <string name="logo">logo_topbar_echomusic</string>
+    <string name="splash_background">splash_bg_echomusic</string>
+    <string name="splash_foreground">splash_logo_echomusic</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_bg">bgnew</string>     
+    <string name="set_banner">banner_9x9</string>   
+	<string name="fb_app_id">212239432317755</string>
     -->
-    
-    <!-- cts 
+	
+    <!-- cts  -->
+    <!--     
     <string name="app_name">CTS</string>
     <string name="app_icon">@drawable/cts_icon_new</string>    
     <string name="white_label">cts</string>     
     <string name="mso">cts</string>
     <string name="default_region">zh</string>               
     <string name="logo">cts_logo</string>
-    <string name="splash_background">splash_cts_bg</string>
-    <string name="splash_foreground">cts_big_splash</string>    
+    <string name="splash_background">bg_open_cts</string>
+    <string name="splash_foreground">open_logo_cts</string>    
     <string name="splash_slogan"></string>    
-    <string name="signin_logo">logo_signin_vice</string>        
-    <string name="signin_bg">splash_vice</string>           
-	<string name="fb_app_id">361253423962738</string>       
+    <string name="signin_logo">logo_cts</string>        
+    <string name="signin_bg">bg_open_cts</string>
+    <string name="set_banner">banner_cts</string>            
+	<string name="fb_app_id">1429057570658015</string>       
     -->
- 
+
     <!-- goodtv -->
     <!-- 
     <string name="app_name">GOODTV</string>
@@ -60,7 +232,7 @@
     <string name="splash_slogan"></string>           
     <string name="signin_logo">logo_signin_vice</string>        
     <string name="signin_bg">splash_vice</string>        	
- 	<string name="fb_app_id">361253423962738</string>       
+ 	<string name="fb_app_id">555946694494117</string>       
  	-->
  	
     <!-- ddtv -->
@@ -76,7 +248,7 @@
     <string name="splash_slogan"></string>
     <string name="signin_logo">logo_signin_vice</string>        
     <string name="signin_bg">splash_vice</string>
-	<string name="fb_app_id">361253423962738</string>                          
+	<string name="fb_app_id">496791563769983</string>                          
     -->     
   
     <!-- fcu -->
@@ -92,10 +264,11 @@
     <string name="splash_slogan"></string>
     <string name="signin_logo">logo_signin_vice</string>                 
     <string name="signin_bg">splash_vice</string>      
-	<string name="fb_app_id">361253423962738</string>           
+	<string name="fb_app_id">180687745468145</string>           
   	-->
   	           
-    <!-- Tzu Chi
+    <!-- Tzu Chi -->
+    <!--    
     <string name="app_name">Tzu Chi</string>
 	<string name="app_icon">@drawable/tc_icon_new</string>        
     <string name="white_label>tc</string>
@@ -109,6 +282,57 @@
     <string name="signin_bg">splash_vice</string>         
 	<string name="fb_app_id">361253423962738</string>           
     -->
+    
+    <!-- thenewslens  -->
+    <!-- 
+    <string name="app_name">Thenewslens FLIPr</string>
+    <string name="app_icon">@drawable/launch_logo_thenewslens</string>    
+    <string name="white_label">thenewslens</string>     
+    <string name="mso">thenewslens</string>
+    <string name="default_region">zh</string>               
+    <string name="logo">logo_thenewslens</string>
+    <string name="splash_background">bg_open_thenewslens</string>
+    <string name="splash_slogan"></string>    
+    <string name="splash_foreground">open_logo_thenewslens</string>    
+    <string name="signin_logo">logo_signin_thenewslens</string>        
+    <string name="signin_bg">bg_open_thenewslens</string>
+    <string name="set_banner">banner_thenewslens</string>            
+	<string name="fb_app_id">436354623134686</string>
+	-->
+	 
+ 	<!-- superstar  -->
+    <!-- 
+    <string name="app_name">Superstar FLIPr</string>
+    <string name="app_icon">@drawable/launch_logo_superstar</string>    
+    <string name="white_label">superstar</string>     
+    <string name="mso">superstar</string>
+    <string name="default_region">zh</string>               
+    <string name="logo">logo_superstar</string>
+    <string name="splash_background">bg_open_superstar</string>
+    <string name="splash_slogan"></string>    
+    <string name="splash_foreground">open_logo_superstar</string>    
+    <string name="signin_logo">logo_signin_superstar</string>        
+    <string name="signin_bg">bg_open_superstar</string>
+    <string name="set_banner">banner_superstar</string>            
+	<string name="fb_app_id">422631834537839</string>
+	-->
+    
+    <!-- musicvideo  -->
+    <!-- 
+    <string name="app_name">Musicvideo FLIPr</string>
+    <string name="app_icon">@drawable/launch_logo_musicvideo</string>    
+    <string name="white_label">musicvideo</string>     
+    <string name="mso">musicvideo</string>
+    <string name="default_region">zh</string>               
+    <string name="logo">logo_musicvideo</string>
+    <string name="splash_background">bg_open_musicvideo</string>
+    <string name="splash_slogan"></string>    
+    <string name="splash_foreground">open_logo_musicvideo</string>    
+    <string name="signin_logo">logo_signin_musicvideo</string>        
+    <string name="signin_bg">bg_open_musicvideo</string>
+    <string name="set_banner">banner_musicvideo</string>            
+	<string name="fb_app_id">463854980410020</string>
+	-->
          
     <bool name="uses_chromecast">true</bool>
     
