Added Chinese Translations.
git-svn-id: http://svn.sj.9x9.tv:8080/repos/misc/trunk/mobile/android51a@5993 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -280,7 +280,7 @@
     <string name="pw_hint_email">電子郵件</string>
     <string name="pw_hint_name">名稱</string>        
     <string name="pw_hint_password">密碼</string>
-    <string name="pw_hint_verify">再次輸入密碼</string>
+    <string name="pw_hint_verify">確認密碼</string>
     <string name="cancel">取消</string>
     <string name="si_sign_in_button">登入</string>
     <string name="si_sign_up_button">註冊</string>    
@@ -377,10 +377,10 @@
 	<string name="displaynamecolon">使用者名稱：</string>
 	<string name="oldpasswordcolon">目前的密碼：</string>		
 	<string name="changepasswordcolon">新密碼：</string>
-	<string name="verifypasswordcolon">重新輸入新密碼：</string>
+	<string name="verifypasswordcolon">確認新密碼：</string>
 	<string name="oldpassword">目前的密碼</string>		
 	<string name="changepassword">新密碼</string>	
-	<string name="verifypassword">重新輸入新密碼</string>		
+	<string name="verifypassword">確認新密碼</string>		
 	<string name="guidedisplaycolon">設定個人節目表模式：</string>
 	<string name="bycreating">我接受9x9.tv的</string>
 	<string name="privacypolicy">隱私政策</string>
@@ -423,7 +423,7 @@
     <string name="namecolon">名稱：</string>          
     <string name="period">。</string>     
     <string name="rename_this_set">變更頻道名稱</string>    
-    <string name="current_password_wrong">目前的密碼錯誤</string>    
+    <string name="current_password_wrong">密碼錯誤</string>    
     <string name="devicecolon">設備：</string>     
     <string name="modelcolon">型號：</string>       
     <string name="resolutioncolon">分辨率：</string>          
@@ -441,23 +441,23 @@
     <string name="instructional_video">使用說明視頻</string>    
     <string name="home">首頁</string>
     <string name="my_following">我的最愛</string>        
-    <string name="sign_out">Sign Out</string>     
-    <string name="wait">[Wait...]</string>     
-    <string name="episode_lc">episode</string>
-    <string name="episodes_lc">episodes</string>             
-    <string name="searched_for_colon">Searched for:</string>    
-    <string name="account">Account</string>
-	<string name="newpassword">New Password</string>	
-	<string name="oldpw">Old</string>	   	 
-	<string name="newpw">New</string>	
-	<string name="verifypw">Verify</string>
-	<string name="guide_guest_hint">Get to your favorite programs by following them so you never miss an update. Sign in to start following programs and build your own personal program guide!</string>
-	<string name="terms_of_use">Terms of Use</string> 			
-	<string name="by_creating">By creating an account, I accept the terms of service and privacy policy of this app.</string>	 
-	<string name="suggested_tv_apps">Suggested TV Apps</string>	 	
-	<string name="get_suggested_tv_apps">Get Suggested TV Apps Now!</string>		
-	<string name="download">Download</string>	
-	<string name="on_chromecast">Video is playing on Chromecast</string>
+    <string name="sign_out">登出</string>     
+    <string name="wait">[請稍候...]</string>     
+    <string name="episode_lc">劇集</string>
+    <string name="episodes_lc">劇集</string>             
+    <string name="searched_for_colon">搜尋結果:</string>    
+    <string name="account">帳號</string>
+	<string name="newpassword">新密碼</string>	
+	<string name="oldpw">目前的密碼</string>	   	 
+	<string name="newpw">新密碼</string>	
+	<string name="verifypw">確認</string>
+	<string name="guide_guest_hint">若想訂閱更多好看節目，請登入或註冊帳號!</string>
+	<string name="terms_of_use">使用條款</string> 			
+	<string name="by_creating">我同意FLIPr.tv的使用條款與隱私政策!</string>	 
+	<string name="suggested_tv_apps">更多APP</string>	 	
+	<string name="get_suggested_tv_apps">多螢互動的APP都在這裡!</string>		
+	<string name="download">下載</string>	
+	<string name="on_chromecast">影片播放於 Chromecast</string>
 	<string name="shake">Shake &amp; Discover</string>
 	<string name="shake_text">Shake your device to discover new channels.</string>	
 </resources>
