--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 9x9 -->
+    <!-- 
    	<string name="app_name">9x9.tv</string>
 	<string name="app_icon">@drawable/tt_icon_new</string>       	
     <string name="white_label">portal</string>
@@ -12,10 +13,11 @@
     <string name="splash_slogan">Empowering Cloud TV</string>     
     <string name="signin_logo">tvlogo</string>    
     <string name="signin_bg">bgnew</string>      
-    <string name="set_banner">banner_crashcourse</string>     
+    <string name="set_banner">banner_9x9</string>     
 	<string name="fb_app_id">361253423962738</string>
-	
-    <!-- Joey Graceffa -->
+	 -->
+
+	<!-- Joey Graceffa -->
     <!--   
     <string name="app_name">JoeyGraceffa on Flipr Unofficial</string>
     <string name="app_icon">@drawable/joeygraceffa_launch_logo</string>
@@ -82,9 +84,92 @@
     <string name="set_banner">history_banner01</string>
     <string name="fb_app_id">361253423962738</string>
  	-->
+       
+    <!-- NBA -->
+    <!-- 
+    <string name="app_name">NBA on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/nba_launch_logo</string>
+    <string name="white_label">nba</string>
+    <string name="mso">nba</string>
+    <string name="default_region">en</string>
+    <string name="logo">nba_logo</string>
+    <string name="splash_background">nba_bg_open</string>
+    <string name="splash_foreground">nba_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">nba_logo_signin</string>
+    <string name="signin_bg">nba_bg_open</string>
+    <string name="set_banner">nba_banner01</string>
+    <string name="fb_app_id">277020789128327</string>
+    -->
+
+    <!-- Smosh -->
+    <string name="app_name">Smosh on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/smosh_launch_logo</string>
+    <string name="white_label">smosh</string>
+    <string name="mso">smosh</string>
+    <string name="default_region">en</string>
+    <string name="logo">smosh_logo</string>
+    <string name="splash_background">smosh_bg_open</string>
+    <string name="splash_foreground">smosh_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">smosh_logo_signin</string>
+    <string name="signin_bg">smosh_bg_open</string>
+    <string name="set_banner">smosh_banner01</string>
+    <string name="fb_app_id">492773477497848</string>
+	
+    <!-- Shane -->
+    <!-- 
+    <string name="app_name">Shane on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/shane_launch_logo</string>
+    <string name="white_label">shane</string>
+    <string name="mso">shane</string>
+    <string name="default_region">en</string>
+    <string name="logo">shane_logo</string>
+    <string name="splash_background">shane_bg_open</string>
+    <string name="splash_foreground">shane_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">shane_logo_signin</string>
+    <string name="signin_bg">shane_bg_open</string>
+    <string name="set_banner">shane_banner01</string>
+    <string name="fb_app_id">359889977487152</string>
+    -->   
+	
+    <!-- College Humor -->
+    <!-- 
+    <string name="app_name">Collegehumor on Flipr Unofficial</string>
+    <string name="app_icon">@drawable/collegehumor_launch_logo</string>
+    <string name="white_label">collegehumor</string>
+    <string name="mso">collegehumor</string>
+    <string name="default_region">en</string>
+    <string name="logo">collegehumor_logo</string>
+    <string name="splash_background">collegehumor_bg_open</string>
+    <string name="splash_foreground">collegehumor_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">collegehumor_logo_signin</string>
+    <string name="signin_bg">collegehumor_bg_open</string>
+    <string name="set_banner">collegehumor_banner01</string>
+    <string name="fb_app_id">613862398667500</string>
+    -->
+	
+    <!-- Network_A -->
+    <!-- 
+    <string name="app_name">Network_A on FLIPr</string>
+    <string name="app_icon">@drawable/networka_launch_logo</string>
+    <string name="white_label">networka</string>
+    <string name="mso">networka</string>
+    <string name="default_region">en</string>
+    <string name="logo">logo_networka</string>
+    <string name="splash_background">bg_open_networka</string>
+    <string name="splash_foreground">open_logo_networka</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">logo_networka</string>
+    <string name="signin_bg">bg_open_networka</string>
+    <string name="set_banner">banner_networka</string>
+    <string name="fb_app_id">450168698417667</string>
+    -->
     
     <!-- crash course -->
-    <!--   
+    <!--
     <string name="app_name">Crash Course on FLIPr</string>
     <string name="app_icon">@drawable/crashcourse_launch_logo</string>    
     <string name="white_label">crashcourse</string>     
@@ -99,7 +184,7 @@
     <string name="set_banner">banner_crashcourse</string>      	  
     <string name="fb_app_id">1414438248794640</string>
     -->
-
+    
     <!-- EchoMusic -->
     <!--
     <string name="app_name">音樂圖書館</string>
@@ -118,24 +203,24 @@
         
     <!-- string name="app_name">華視</string --><!-- cts original -->
     <!-- cts festival-->  
-    <!--   
-    <string name="app_name">微電影節 – 華視</string>
+    <!--    
+    <string name="app_name">華視雲端網</string>
     <string name="app_icon">@drawable/cts_icon_new</string>
     <string name="white_label">cts</string>
     <string name="mso">cts</string>    
     <string name="default_region">zh</string>    
     <string name="logo">cts_logo</string>  
-    <string name="splash_background">splash_cts_bg</string>
-    <string name="splash_foreground">cts_big_splash</string>    
+    <string name="splash_background">bg_open_cts</string>
+    <string name="splash_foreground">open_logo_cts</string>    
     <string name="splash_slogan"></string>            
-    <string name="signin_logo">logo_signin_vice</string>        
-    <string name="signin_bg">splash_vice</string>           
+    <string name="signin_logo">logo_cts</string>        
+    <string name="signin_bg">bg_open_cts</string> 
+    <string name="set_banner">banner_cts</string>           
 	<string name="fb_app_id">361253423962738</string>              
-    -->
+     -->
     
     <!-- thenewslens  -->
-     
-    <!--
+    <!-- 
     <string name="app_name">關鍵評論網 FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_thenewslens</string>    
     <string name="white_label">thenewslens</string>     
@@ -149,7 +234,7 @@
     <string name="signin_bg">bg_open_thenewslens</string>
     <string name="set_banner">banner_thenewslens</string>            
 	<string name="fb_app_id">436354623134686</string>
-	-->
+    -->
 
     <!-- goodtv -->
     <!-- 
@@ -217,7 +302,7 @@
 	-->
 	
 	<!-- superstar  -->
-    <!--   
+    <!--    
     <string name="app_name">網路大明星</string>
     <string name="app_icon">@drawable/launch_logo_superstar</string>    
     <string name="white_label">superstar</string>     
@@ -231,7 +316,7 @@
     <string name="signin_bg">bg_open_superstar</string>
     <string name="set_banner">banner_superstar</string>            
 	<string name="fb_app_id">422631834537839</string>
-	 -->
+	-->
     
     <!-- musicvideo  -->
     <!--    
@@ -299,7 +384,7 @@
     <string name="sign_up_button">註冊</string>
     <string name="sign_in_sign_up_botton">登入 / 註冊</string>
     <string name="version">版本： </string>    
-    <string name="copyright">Copyright 2012-2013  9x9.tv</string>
+    <string name="copyright">Copyright 2012-2014  9x9.tv</string>
     <string name="visit_for_terms">請參閱使用條款與隱私權政策</string>
     <string name="synchronizing">同步您的YouTube帳號，此將花一些時間。</string>
     <string name="tlogin_sign_in_with_youtube">使用 YouTube 帳號登入</string>
@@ -453,12 +538,12 @@
 	<string name="verifypw">確認</string>
 	<string name="guide_guest_hint">若想訂閱更多好看節目，請登入或註冊帳號!</string>
 	<string name="terms_of_use">使用條款</string> 			
-	<string name="by_creating">我同意FLIPr.tv的使用條款與隱私政策!</string>	 
+	<string name="by_creating">我同意FLIPr.tv的使用條款與隱私政策</string>	 
 	<string name="suggested_tv_apps">更多APP</string>	 	
-	<string name="get_suggested_tv_apps">多螢互動的APP都在這裡!</string>		
+	<string name="get_suggested_tv_apps">多螢互動的APP都在這裡</string>		
 	<string name="download">下載</string>	
 	<string name="on_chromecast">影片播放於 Chromecast</string>
-	<string name="shake">Shake &amp; Discover</string>
-	<string name="shake_text">Shake your device to discover new channels.</string>	
-	<string name="sign_up_a_new_account">Sign up a new account</string>
+	<string name="shake">搖搖「看」</string>
+	<string name="shake_text">搖動您的行動裝置來看看最夯的節目</string>	
+	<string name="sign_up_a_new_account">註冊新帳號</string>
 </resources>
