--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">9x9.tv</string>
 	<string name="app_icon">@drawable/tt_icon_new</string>         
     <string name="white_label">portal</string>
-    <string name="mso">joeygraceffa</string>
+    <string name="mso">9x9</string>
     <string name="default_region">en</string>    
     <string name="logo">tvlogo</string>   
     <string name="splash_background">bgnew</string>
