--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -560,4 +560,5 @@
 	<string name="year">年</string>
 	<string name="years">年</string>
 	<string name="long_ago">long ago</string>	
+	<string name="pull_to_refresh">Pull to refresh</string>	
 </resources>
